--- a/css/modules/_voice.scss
+++ b/css/modules/_voice.scss
@@ -11,7 +11,7 @@
     /* Space for bottom content */
 
     @media screen and (max-width: $breakpoint-sp) {
-        padding-bottom: 100px;
+        padding-bottom: 60px; // Standardized SP padding
     }
 
     /* Title Area with Full Width Background */
