--- a/css/modules/_difference.scss
+++ b/css/modules/_difference.scss
@@ -27,6 +27,7 @@
         @media screen and (max-width: $breakpoint-sp) {
             flex-direction: column;
             gap: 30px;
+            margin-top: 0px;
         }
     }
 
@@ -61,6 +62,11 @@
         justify-content: center;
         gap: 10px;
 
+        @media screen and (max-width: $breakpoint-sp) {
+            margin-top: 0px;
+            margin-bottom: 20px;
+        }
+
         .difference__col-logo {
             height: auto;
             width: 166px;
@@ -85,6 +91,11 @@
         li {
             margin-bottom: 10px;
             text-align: center;
+
+            @media screen and (max-width: $breakpoint-sp) {
+                margin-bottom: 20px;
+                line-height: 1.3;
+            }
         }
     }
 
@@ -95,12 +106,26 @@
         img {
             width: 100%;
             height: auto;
+
+            @media screen and (max-width: $breakpoint-sp) {
+                transform: rotate(90deg); // Point down on mobile
+            }
         }
 
         @media screen and (max-width: $breakpoint-sp) {
-            transform: rotate(90deg); // Point down on mobile
-            width: 40px;
+            width: 46px;
+            // transform removed from here to avoid conflict with js-fade
+            margin-bottom: -60px; // Overlap with content below
+            position: relative;
+            z-index: 2;
         }
+    }
+
+    &__connector {
+        font-size: 16px;
+        font-weight: 500;
+        text-align: center;
+        margin: 10px 0; // Adjust spacing as needed
     }
 
     &__gcg-box {
@@ -129,6 +154,17 @@
         @media screen and (max-width: $breakpoint-sp) {
             width: 150px;
             bottom: -30px;
+        }
+    }
+
+    // Adjustment for title layout
+    .c-title__line-1 {
+        display: inline-flex;
+        align-items: center;
+        gap: 15px;
+
+        @media screen and (max-width: $breakpoint-sp) {
+            gap: 10px;
         }
     }
 }
